FIxing overflowing of header

--- a/vms/vms/static/vms/css/style.css
+++ b/vms/vms/static/vms/css/style.css
@@ -113,6 +113,7 @@ body {
 .header {
   font-family: Cairo;
   color: #8d2165;
+  padding-left: 15px;
 }
 
 .link {
@@ -131,7 +132,7 @@ body {
 
 .btn-success:hover {
   background-color: #288F79;
-  border-color: #288F79; 
+  border-color: #288F79;
 }
 
 .btn-info {
@@ -156,8 +157,8 @@ body {
 
 
 .btn-primary, .btn-primary[disabled] {
-  background-color: #005c88; 
-  border-color: #005c88; 
+  background-color: #005c88;
+  border-color: #005c88;
 
 }
 
@@ -169,7 +170,6 @@ body {
 /* Custom page CSS
 -------------------------------------------------- */
 body > .container {
-  padding: 15px 0;
   padding-top: 0px;
   overflow-x: hidden;
 }
@@ -351,4 +351,3 @@ p.comment-alert {
     font-size: 50px;
   }
 }
-
